fix: change box-shadow for the dark mode

--- a/src/css/popup.scss
+++ b/src/css/popup.scss
@@ -263,10 +263,10 @@ nav {
     box-shadow: 0 1px 0 rgba(#fff, 0.07);
   }
 
-  .menu {
-    ul {
-      box-shadow: 0 -1px 0 rgba(#fff, 0.07);
-    }
+  .menu ul,
+  .exporter-options,
+  .exporter-btns {
+    box-shadow: 0 -1px 0 rgba(#fff, 0.07);
   }
 
   .exporter-icon {
